# hs-satisfy

./: .gitignore  LICENSE.md  README.md  default.nix  flake.nix  satisfy.cabal
lib/: Satisfy.hs
test/: test.hs
